fix dark mode

--- a/src/Pages/CityIntelligence/bus/index.css
+++ b/src/Pages/CityIntelligence/bus/index.css
@@ -71,6 +71,8 @@ button[type="default"][plain] {
     color: #FFA000;
 }
 
-.weui-dialog__bd:first-child {
-    color: #fff;
+@media (prefers-color-scheme:dark) {
+    .weui-dialog__bd:first-child {
+        color: #fff;
+    }
 }
