--- a/src/Pages/darkSupport.css
+++ b/src/Pages/darkSupport.css
@@ -7,6 +7,10 @@
         background-color: #222;
         color: #fff;
     }
+    .weui-panel__bd {
+        background-color: #222;
+        color: #fff;
+    }
     .weui-grid__label {
         background-color: #222;
         color: #fff;
